src-ken&y/objects/Claim__c.object
<CustomObject>
    <customHelpPage>HelpClaims</customHelpPage>
    <description>Tracks the lifecycle of source documents claims that require further review.</description>
    <fields>
        <fullName>AR_Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Reason Code.</description>
        <label>Reason Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>You can’t select a resolution code with a company different from the claim company.</errorMessage>
            <filterItems>
                <field>Reason_Code__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Reason_Code__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Reason_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Deductions</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Claims (AR Reason Code)</relationshipLabel>
        <relationshipName>Claims_AR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aging_Date__c</fullName>
        <description>This date defaults to the claim date, but can be changed to re-age claims where relevant.</description>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The amount under review</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Authorization</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <description>Autonumber</description>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bill_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Claims (Bill to Customer)</relationshipLabel>
        <relationshipName>Claims_Bill_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_Balance__c</fullName>
        <formula>IF(OR(ISPICKVAL(Settlement_Method__c, &quot;Chargeback&quot;),ISPICKVAL(Settlement_Method__c, &quot;Split&quot;),ISPICKVAL(Status__c, &quot;Closed&quot;),ISPICKVAL(Status__c, &quot;Cancelled&quot;)), 0, Amount__c - Total_Line_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Date__c</fullName>
        <description>The date the claim was received.</description>
        <label>Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correspondant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User.</description>
        <label>Correspondant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currently_Reopened_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Reopened Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Invoice</label>
        <referenceTo>Customer_Invoice__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customer Receipt Line.</description>
        <label>Customer Receipt Line</label>
        <referenceTo>Customer_Receipt_Line__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customer Receipt.</description>
        <label>Customer Receipt</label>
        <referenceTo>Customer_Receipt__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Aged__c</fullName>
        <formula>IF(ISNULL(Settlement_Date__c),
TODAY() - Aging_Date__c,
Settlement_Date__c - Aging_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Aged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>The number of days the claim was open.</description>
        <formula>IF( ISNULL(Settlement_Date__c),
TODAY() -  Claim_Date__c,
Settlement_Date__c - Claim_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of this Claim</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enter_Claims_Notes__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <description>The number of currently unresolved exceptions on this record.</description>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Exceptions_Count__c &gt; 0 ||  Line_Exceptions__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Research__c</fullName>
        <inlineHelpText>Specifies whether an adjustment to inventory is required. Options are “Adjustment Required”, “No Adjustment Required”, or “Reject”. Inventory adjustment can be required in under-shipment/over-shipment scenarios (customer received too few/too many items).</inlineHelpText>
        <label>Inventory Research</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment Required</fullName>
                </value>
                <value>
                    <fullName>No Adjustment Required</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Action__c</fullName>
        <label>Last Action</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Exceptions__c</fullName>
        <description>Lines on this Claim that have exceptions</description>
        <label>Line Exceptions</label>
        <summaryForeignKey>Claim_Line__c.Claim__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manage__c</fullName>
        <label>Manage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Corporate Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Claims (Parent Customer)</relationshipLabel>
        <relationshipName>Claims_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this record is ready for processing.</description>
        <inlineHelpText>A checkmark indicates that the claim is ready for processing (Resolve, Chargeback, etc).</inlineHelpText>
        <label>Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Over, Short, Damage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <inlineHelpText>A reference number/code supplied by the customer.</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to another related claim.</description>
        <label>Related Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Related Claims</relationshipLabel>
        <relationshipName>Related_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A code indicating how the claim/line was resolved. This uses the Reason Code object, where Type = “Resolution”. See &quot;Reason Codes&quot; in the help for more information.</inlineHelpText>
        <label>Resolution Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>You can’t select a resolution code with a company different from the claim company.</errorMessage>
            <filterItems>
                <field>Reason_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Resolution</value>
            </filterItems>
            <filterItems>
                <field>Reason_Code__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Reason_Code__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Claims (Resolution Code)</relationshipLabel>
        <relationshipName>Claim_Resolutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Settled_Against_Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settled Against Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Claims (Settled Against Claim)</relationshipLabel>
        <relationshipName>Settled_Against_Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Settlement_Date__c</fullName>
        <description>The date this Claim was settled.</description>
        <label>Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Settlement_Method__c</fullName>
        <label>Settlement Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold to Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sold To</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Top_Parent_Customer__c</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Claims (Sold to Customer)</relationshipLabel>
        <relationshipName>Claims_Sold_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>This will define the from where the claim was created.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Invoice Deduction</fullName>
                </value>
                <value>
                    <fullName>General Deduction</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Claim Status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <inlineHelpText>If the Type is “Transportation”, the subtype is “Damage”. If the Type is “Promotion”, the subtype can be “Trade”, “Coupon”, or “Rebate”.  Note that you can setup the claim process engine to select a Subtype based on the reason code assigned to the claim.</inlineHelpText>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Line_Amount__c</fullName>
        <label>Total Line Amount</label>
        <summarizedField>Claim_Line__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Claim_Line__c.Claim__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <inlineHelpText>The tracking number for the claim.</inlineHelpText>
        <label>Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Currency type for the Amount</description>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Claim Type</description>
        <inlineHelpText>The claim type. Type can be either “Transportation” or “Promotion”.  Note that you can configure the claim process engine to select a Type based on the reason code you assign to the claim.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Allowance Accrual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Resolution_Code__c</columns>
        <columns>Customer_Receipt_Line__c</columns>
        <columns>Claim_Date__c</columns>
        <columns>Customer_Receipt__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Claim</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Update_Amount_While_Updating</fullName>
        <active>true</active>
        <errorConditionFormula>AND(not(ISNEW()),ISCHANGED(Amount__c ),  NOT( ISPICKVAL(Source__c, &quot;Manual&quot;) ) )</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>You cannot update the amount on a non manual claim.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Update_Amount_on_Related_Claims</fullName>
        <active>true</active>
        <errorConditionFormula>AND(not(ISNEW()),ISCHANGED(Amount__c ), NOT( ISBLANK( Related_Claim__c ) ))</errorConditionFormula>
        <errorMessage>Cannot update amount on claim created from split</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_enter_a_zero_or_negative_amount</fullName>
        <active>true</active>
        <description>You can&apos;t enter a zero or negative amount for a manual claim.</description>
        <errorConditionFormula>AND(ISPICKVAL(Source__c, &quot;Manual&quot;) , Amount__c &lt;= 0)</errorConditionFormula>
        <errorMessage>You can&apos;t enter a zero or negative amount for a manual claim.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_update_cancelled_claims</fullName>
        <active>true</active>
        <description>User should not able to change the status of cancelled claims</description>
        <errorConditionFormula>AND(ISCHANGED(Status__c),ISPICKVAL(PRIORVALUE(Status__c) ,&apos;Cancelled&apos;))</errorConditionFormula>
        <errorMessage>Cancelled claim&apos;s status can&apos;t be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_Update_ClaimDate_on_Related_Claims</fullName>
        <active>true</active>
        <errorConditionFormula>AND(not(ISNEW()),ISCHANGED( Claim_Date__c  ), NOT( ISBLANK( Related_Claim__c ) ))</errorConditionFormula>
        <errorMessage>Cannot update claim date on claim created from split</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_enter_negative_amount_for_deduction</fullName>
        <active>true</active>
        <description>You can&apos;t enter a zero or negative amount for an invoice or general deduction claim.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Source__c, &quot;General Deduction&quot;), ISPICKVAL(Source__c, &quot;Invoice Deduction&quot;)) , Amount__c &lt;= 0)</errorConditionFormula>
        <errorMessage>You can&apos;t enter a zero or negative amount for an invoice or general deduction claim.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Claims_without_a_settlement_method</fullName>
        <active>true</active>
        <description>Claims cannot be closed without a settlement method.</description>
        <errorConditionFormula>AND( 
		ISPICKVAL(Status__c,&apos;Closed&apos;), 
		OR( 
		ISBLANK(TEXT(Settlement_Method__c)), 
		ISNULL(TEXT(Settlement_Method__c)) 
		)  
		)</errorConditionFormula>
        <errorMessage>Please populate settlement method while closing claims.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Line_Amount_more_than_Claim_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>if( Total_Line_Amount__c != 0, 
    if(Amount__c &lt; 0, 
       if(Amount__c &gt; Total_Line_Amount__c, true, false),
    if(Amount__c &lt; Total_Line_Amount__c, true, false)), false)</errorConditionFormula>
        <errorMessage>The Total Line Amount is exceeding the Amount on Claim</errorMessage>
    </validationRules>
</CustomObject>